chat: fix message image is too wide issue

--- a/app/internal_packages/edison-beijing-chat/styles/Messages.less
+++ b/app/internal_packages/edison-beijing-chat/styles/Messages.less
@@ -123,6 +123,7 @@
     flex-flow: row wrap;
     align-items: baseline;
     justify-content: flex-end;
+    overflow-x: hidden;
   }
 
   .messageBody {
